--- a/style.css
+++ b/style.css
@@ -818,4 +818,101 @@
     color: #888;
     margin-top: 5px;
   }
+
+  @media only screen and (max-width: 940px){
+
+    .quick-links {
+      display: table-row-group;
+      color: #fff;
+    }
+    
+    .footer-container {
+      display: inline;
+    }
+
+    .navbar {
+      height: 80px;
+    }
+
+    .menu-container{
+        display: none;
+    }
+
+  .img-slider{
+    display: none;
+  }
+
+  #menu__toggle {
+    opacity: 0;
+  }
+  #menu_toggle:checked + .menu_btn > span {
+    transform: rotate(45deg);
+  }
+  #menu_toggle:checked + .menu_btn > span::before {
+    top: 0;
+    transform: rotate(0deg);
+  }
+  #menu_toggle:checked + .menu_btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu_toggle:checked ~ .menu_box {
+    left: 0 !important;
+  }
+  .menu__btn {
+    position: fixed;
+    top: 34px;
+    left: 20px;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    z-index: 1;
+  }
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #616161;
+    transition-duration: .25s;
+  }
+  .menu__btn > span::before {
+    content: '';
+    top: -8px;
+  }
+  .menu__btn > span::after {
+    content: '';
+    top: 8px;
+  }
+  .menu__box {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 300px;
+    height: 100%;
+    margin: 0;
+    padding: 80px 0;
+    list-style: none;
+    background-color: #ECEFF1;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+    transition-duration: .25s;
+  }
+  .menu__item {
+    display: block;
+    padding: 12px 24px;
+    color: #333;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+    transition-duration: .25s;
+  }
+  .menu__item:hover {
+    background-color: #CFD8DC;
+  }
+
+}
   
