--- a/style.css
+++ b/style.css
@@ -914,5 +914,13 @@
     background-color: #CFD8DC;
   }
 
+  
+}
+
+@media only screen and (min-width: 940px){
+
+.hamburger-menu{
+  display: none;
+}
 }
   
